2010-02-26 Magnus Hagdorn
 * libglimmer/ncdf_template.F90.in: load modules containing scales, declare
   variable for scales
 * scripts/generate_ncvars.py: store scaleing factors in netCDF attribute, 
   only apply scaling factors if they are not attached to the variable

2010-02-25 Magnus Hagdorn
 * doc/ug/glide.tex: document new option
 * libglide/glimmer_ncio.F90: use default float type for time variable
 * libglide/glimmer_ncparams.F90: add option to change default float type
 * libglimmer/glimmer_ncdf.F90: define default float type for netCDF variables
 * libglimmer/ncdf_template.F90.in: add function which applies default float
   type where required
 * scripts/generate_ncvars.py: use default float type for all FP variables

2010-01-27 Magnus Hagdorn
 * configure.in: use new macro to figure out how to disable free form line length limit
 * m4macros/ax_f90_no_line_limit_flag.m4: new macro to find flag to disable free form
   line length limit

2009-11-10 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: check for C++ compiler and C++ bindings to netCDF
 * m4macros/netcdf.m4: implemented check for C++ netCDF bindings
 * utils/Makefile.am: compile new program
 * utils/compare.cpp: add new utility which tests if two netCDF files
   are reasonably identical

2009-10-16 Magnus Hagdorn
 * example-drivers/eis/src/eis_ela.F90: use parameter for internal message
   buffer size
 * example-drivers/eis/src/eis_slc.F90: ditto
 * example-drivers/eis/src/eis_temp.F90: ditto
 * libglide/glimmer_ncio.F90: ditto

2009-10-16 Magnus Hagdorn
 * libglide/glide.F90: use derivative module
 * libglide/glide_thck.F90: ditto, remove old code

2009-10-16 Magnus Hagdorn
 * libglimmer/glimmer_deriv.F90: slight clean up, reformat comments to 
   doxygen
 * libglimmer/unittest_glimmer_deriv.F90: updated copyright notice
 * libglimmer/xls.F90: ditto

2009-10-16 Magnus Hagdorn
 * libglimmer/unittest_glimmer_deriv.F90: fix indentation
 * libglimmer/glimmer_deriv.F90: ditto